--- a/templates/login.html
+++ b/templates/login.html
@@ -117,9 +117,9 @@
         </form>
     </div>
     
-    <div class="forgot-password">
+    <!-- <div class="forgot-password">
         <a href="#">Forgot Password?</a>
-    </div>
+    </div> -->
     
     <!-- Flash messages
     {% with messages = get_flashed_messages(with_categories=true) %}
